# disrnn

./: .gitignore  README.md  data_processing.py  disrnn.ipynb  log_reg.ipynb  pyproject.toml  rflr.ipynb  run_sweep.py  sgru.ipynb  switch_utils.py  switching.ipynb  test.ipynb  tiny.ipynb  train.py  workflow.py
disentangled_rnns/: example.py  switch_utils.py
src/: disrnn.py  gru.py  lr.py  rflr.py  rnn_utils.py  sgru.py  switch_utils.py  train.py
