[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "disentangled_rnns"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "disentangled_rnns authors", email="kevinjmiller@google.com"}]
classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
# Installed locally with `pip install -e .`
dependencies = [
    "absl-py>=2.2.0",
    "chex>=0.1.7",
    "dm-haiku>=0.0.13",
    "flax>=0.7.2",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

# `version` is automatically set by flit to use `disentangled_rnns.__version__`
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/google-deepmind/disentangled_rnns"
repository = "https://github.com/google-deepmind/disentangled_rnns"
changelog = "https://github.com/google-deepmind/disentangled_rnns/blob/main/CHANGELOG.md"
# documentation = ""

[project.optional-dependencies]
# Development deps (unittest, linting, formating,...)
# Installed through `pip install -e .[dev]`
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[build-system]
# Build system specify which backend is used to build/install the project (flit,
# poetry, setuptools,...). All backends are supported by `pip install`
requires = ["flit_core >=3.8,<4"]
build-backend = "flit_core.buildapi"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.flit.sdist]
# Flit specific options (files to exclude from the PyPI package).
# If using another build backend (setuptools, poetry), you can remove this
# section.
exclude = [
  # Do not release tests files on PyPI
  "**/*_test.py",
]
