[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "disentangled_rnns"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "disentangled_rnns authors", email="kevinjmiller@google.com"}]
classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
]
keywords = []

# pip dependencies of the project
# Installed locally with `pip install -e .`
dependencies = [
    "absl-py>=2.2.0",
    "chex>=0.1.7",
    "dm-haiku>=0.0.13",
    "flax>=0.7.2",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.7.5",
    "pandas>=2.0.3",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[project.urls]
homepage = "https://github.com/google-deepmind/disentangled_rnns"
repository = "https://github.com/google-deepmind/disentangled_rnns"
changelog = "https://github.com/google-deepmind/disentangled_rnns/blob/main/CHANGELOG.md"
# documentation = ""

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-xdist",
    "pylint>=2.6.0",
    "pyink",
]

[tool.pyink]
# Formatting configuration to follow Google style-guide
line-length = 80
unstable = true
pyink-indentation = 2
pyink-use-majority-quotes = true

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

